--- a/vite-project/src/index.css
+++ b/vite-project/src/index.css
@@ -69,3 +69,50 @@
 .yt-title{
   font-size: 26px;
 }
+/* SIDEBAR */
+aside{
+  width: 17%;
+}
+
+aside > ul {
+  width: 100%;
+  padding: 20px;
+}
+
+aside  > ul > li {
+  color:white;
+  display: flex;
+  align-items: center;
+  margin-bottom: 10px;
+  width: 100%;
+  padding: 8px;
+  border-radius: 10px;
+}
+
+aside  > ul > li > svg {
+  color: rgb(245, 7, 7); 
+  margin-right: 10px;
+  font-size: 24px;
+}
+
+aside  > ul > li:hover{
+  background-color: rgb(136, 136, 136);
+  transform: scale(1.1); 
+  color:white;
+  cursor: pointer;
+}
+
+
+aside  > ul > li > span {
+  font-size: 18px;
+  cursor: pointer;
+}
+aside ul{
+  padding-top: 60px;
+  background-color: rgb(37, 36, 36);
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  
+}
