--- a/vite-project/src/index.css
+++ b/vite-project/src/index.css
@@ -4,7 +4,7 @@
   box-sizing: border-box;
 }
 .header-container {
-  background-color: #c4302b; 
+  background-color: rgb(37, 36, 36);
   color: white;
   padding: 15px 70px 15px 15px;
   display: flex;
@@ -47,6 +47,7 @@
   color: #333; 
   font-size: 14px;
   outline: none; 
+  width: 320px;
 }
 
 .input-container input[type="text"]::placeholder {
@@ -65,6 +66,7 @@
   font-size: 28px;
   margin-top: 5px;
   margin-right: 5px;
+  color: rgb(243, 12, 12);
 }
 .yt-title{
   font-size: 26px;
@@ -72,6 +74,7 @@
 /* SIDEBAR */
 aside{
   width: 17%;
+  height: 22.5rem;
 }
 
 aside > ul {
@@ -96,7 +99,7 @@ aside  > ul > li > svg {
 }
 
 aside  > ul > li:hover{
-  background-color: rgb(136, 136, 136);
+  background-color: rgb(167, 165, 165);
   transform: scale(1.1); 
   color:white;
   cursor: pointer;
