--- a/vite-project/src/index.css
+++ b/vite-project/src/index.css
@@ -111,3 +111,11 @@ aside  > ul > li > span {
   cursor: pointer;
 }
 aside ul{
+  padding-top: 30px;
+  background-color: rgb(37, 36, 36);
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  
+}
