--- a/vite-project/src/index.css
+++ b/vite-project/src/index.css
@@ -143,3 +143,28 @@ aside ul{
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
 }
+/* VIDEOCART */
+.video-cart {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 220px;
+  height: 300px;
+  margin: 10px;
+  padding: 5px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+.video-cart img {
+  width: 100%;
+  border-radius: 5px;
+  margin-bottom: 2px;
+  object-fit: cover;
+}
+
+.video-cart p {
+  margin: 5px 0;
+  font-size: 16px;
+  text-align: center;
+}
