--- a/vite-project/src/index.css
+++ b/vite-project/src/index.css
@@ -73,7 +73,7 @@
 }
 /* SIDEBAR */
 aside{
-  width: 17%;
+  width: 15.5%;
   height: 22.5rem;
 }
 
@@ -121,7 +121,7 @@ aside ul{
 }
 /* Main component */
 .main-content{
-  background-color: red;
+  background-color: rgb(37, 36, 36);
   width: 100%;
   height: 100vh;
 }
@@ -130,41 +130,24 @@ aside ul{
   height: 100%;
   display: flex;
 }
-.video-cart{
-  background-color: black;
+/* VIDEOCART */
+.video-card{
+  background-color: orange;
   width: 225px;
-  height: 250px;
+  height: 280px;
   margin: 28px 20px;
 }
 .video-cart p {
   color: white;
 }
+.video-card img{
+  width: 100%;
+}
+
 .current-videos{
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
 }
-/* VIDEOCART */
-.video-cart {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: 220px;
-  height: 300px;
-  margin: 10px;
-  padding: 5px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-}
 
-.video-cart img {
-  width: 100%;
-  border-radius: 5px;
-  margin-bottom: 2px;
-  object-fit: cover;
-}
 
-.video-cart p {
-  margin: 5px 0;
-  font-size: 16px;
-  text-align: center;
-}
+
