--- a/vite-project/src/index.css
+++ b/vite-project/src/index.css
@@ -169,4 +169,36 @@ h1{
 .single-video-container{
   width: 100%;
   background-color: #666;
+  padding: 0 10px;
+  color: rgb(248, 247, 247);
+}
+.video-description{
+  width: 70%;
+  height: 100px;
+  background-color: red;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+.video-description-details{
+  display: flex;
+}
+.video-description-details span{
+  margin:22px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 5px;
+}
+.video-description div h3{
+  margin-bottom: 4px;
+}
+.comment{
+  background-color: rgb(140, 170, 170);
+  width: 70%;
+  display: flex;
+  /* gap: 15px; */
+}
+.comment-details{
+  background-color: orange;
 }
