--- a/vite-project/src/index.css
+++ b/vite-project/src/index.css
@@ -168,17 +168,17 @@ h1{
 /* SINGLE VIDEO */
 .single-video-container{
   width: 100%;
-  background-color: #666;
   padding: 0 10px;
   color: rgb(248, 247, 247);
+  background-color: rgb(37, 36, 36);
 }
 .video-description{
   width: 70%;
   height: 100px;
-  background-color: red;
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
+  margin-bottom: 20px;
 }
 .video-description-details{
   display: flex;
@@ -190,15 +190,14 @@ h1{
   justify-content: center;
   gap: 5px;
 }
-.video-description div h3{
-  margin-bottom: 4px;
+.video-description div h2{
+  margin: 8px 0px;
 }
+
 .comment{
-  background-color: rgb(140, 170, 170);
   width: 70%;
   display: flex;
   margin-bottom: 20px;
-  /* gap: 15px; */
 }
 .comment img{
   width: 47.5px;
@@ -208,4 +207,9 @@ h1{
 }
 .comment-details .author{
  color: rgb(216, 216, 216);
+ margin-bottom: 8px;
+}
+.timestamp{
+  margin-left: 12px;
+  color: rgb(248, 247, 247);
 }
