--- a/vite-project/src/index.css
+++ b/vite-project/src/index.css
@@ -226,3 +226,17 @@ h1{
   flex-direction: column;
   margin-bottom: 50px;
 }
+.channel-container{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.channel-img{
+  height: 160px;
+  width: 200px;
+  border-radius: 50%;
+  
+}
