--- a/vite-project/src/index.css
+++ b/vite-project/src/index.css
@@ -240,6 +240,7 @@ h1{
   border-radius: 50%;
 }
 .title-channel{
+  text-align: center;
   color: white;
   margin: 10px 0;
 }
@@ -247,6 +248,5 @@ h1{
   color: white;
 }
 .details-channel{
-  background-color: rgb(48, 47, 47);
   padding: 2px;
 }
