--- a/vite-project/src/index.css
+++ b/vite-project/src/index.css
@@ -74,11 +74,12 @@
 /* SIDEBAR */
 aside{
   width: 15.5%;
-  height: 22.5rem;
+  height: 25.5rem;
 }
 
 aside > ul {
   width: 100%;
+  height: 29rem;
   padding: 20px;
 }
 
@@ -113,7 +114,7 @@ aside  > ul > li > span {
 aside ul{
   padding-top: 30px;
   background-color: rgb(37, 36, 36);
-  height: 100vh;
+  height: 111rem;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -123,11 +124,11 @@ aside ul{
 .main-content{
   background-color: rgb(37, 36, 36);
   width: 100%;
-  height: 100vh;
+  height: 111rem;
 }
 .main{
   width: 100%;
-  height: 100%;
+  height: 1500px;
   display: flex;
 }
 /* VIDEOCART */
@@ -159,8 +160,8 @@ h3{
 .current-videos{
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
-
 }
+
 h1{
   color: white;
 }
@@ -279,10 +280,13 @@ h1{
   font-weight: bold;
   color: #333;
   margin-top: 20px;
+  margin-bottom: 20px;
   text-align: center;
 }
 
 .suggested-videos-list {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
   list-style-type: none;
   padding: 0;
 }
